Update PostgreSQL volume mount path in docker-compose.yml and README for compatibility with Postgres 18+

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: postgres:18.1
     restart: unless-stopped
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql
     env_file: .env
     environment:
       - POSTGRES_USER=convex
