--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,36 +16,69 @@ services:
       retries: 5
 
   backend:
+    # Change this to :${REV} if you want to pin to a specific version
     image: ghcr.io/get-convex/convex-backend:latest
-    platform: linux/arm64
-    restart: unless-stopped
+    stop_grace_period: 10s
+    stop_signal: SIGINT
     ports:
-      - "127.0.0.1:3210:3210"
-      - "127.0.0.1:3211:3211"
+      - "${PORT:-3210}:3210"
+      - "${SITE_PROXY_PORT:-3211}:3211"
+    volumes:
+      - data:/convex/data
     env_file: .env
     environment:
+      - ACTIONS_USER_TIMEOUT_SECS
+      - AWS_ACCESS_KEY_ID
+      - AWS_REGION
+      - AWS_S3_DISABLE_CHECKSUMS
+      - AWS_S3_DISABLE_SSE
+      - AWS_S3_FORCE_PATH_STYLE
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_SESSION_TOKEN
+      - CONVEX_CLOUD_ORIGIN=${CONVEX_CLOUD_ORIGIN:-http://127.0.0.1:${PORT:-3210}}
+      - CONVEX_RELEASE_VERSION_DEV
+      - CONVEX_SITE_ORIGIN=${CONVEX_SITE_ORIGIN:-http://127.0.0.1:${SITE_PROXY_PORT:-3211}}
+      - DATABASE_URL
+      - DISABLE_BEACON
+      - DOCUMENT_RETENTION_DELAY=${DOCUMENT_RETENTION_DELAY:-172800}
+      - DO_NOT_REQUIRE_SSL
       - INSTANCE_NAME=convex-self-hosted
-      - POSTGRES_URL=postgres://convex:${POSTGRES_PASSWORD}@postgres:5432
-      - DO_NOT_REQUIRE_SSL=1
-    volumes:
-      - ./convex-data:/convex/data
+      - INSTANCE_SECRET
+      - MYSQL_URL
+      - POSTGRES_URL=postgres://convex:${POSTGRES_PASSWORD}@postgres:5432/convex_self_hosted
+      - REDACT_LOGS_TO_CLIENT
+      - RUST_BACKTRACE
+      - RUST_LOG=${RUST_LOG:-info}
+      - S3_ENDPOINT_URL
+      - S3_STORAGE_EXPORTS_BUCKET
+      - S3_STORAGE_FILES_BUCKET
+      - S3_STORAGE_MODULES_BUCKET
+      - S3_STORAGE_SEARCH_BUCKET
+      - S3_STORAGE_SNAPSHOT_IMPORTS_BUCKET
+
+    healthcheck:
+      test: curl -f http://localhost:3210/version
+      interval: 5s
+      start_period: 10s
     depends_on:
       postgres:
         condition: service_healthy
 
   dashboard:
+    # Change this to :${REV} if you want to pin to a specific version
     image: ghcr.io/get-convex/convex-dashboard:latest
-    platform: linux/arm64
-    restart: unless-stopped
+    stop_grace_period: 10s
+    stop_signal: SIGINT
     ports:
-      - "127.0.0.1:6791:6791"
+      - "${DASHBOARD_PORT:-6791}:6791"
     env_file: .env
     environment:
-      - NEXT_PUBLIC_DEPLOYMENT_URL=https://api.doctosaurus.com
+      - NEXT_PUBLIC_DEPLOYMENT_URL=${NEXT_PUBLIC_DEPLOYMENT_URL:-http://127.0.0.1:${PORT:-3210}}
       - CONVEX_BACKEND_URL=http://backend:3210
       - CONVEX_SELF_HOSTED_ADMIN_KEY=${CONVEX_SELF_HOSTED_ADMIN_KEY}
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
 
   caddy:
     build:
@@ -64,5 +97,6 @@ services:
       - ./caddy_config:/config
 
 volumes:
+  data:
   caddy_data:
   caddy_config:
