Add environment variables for database and backend origins in .env.example and README; update pre-docker.sh to generate DATABASE_URL and prompt for domain configuration

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,21 @@ POSTGRES_PASSWORD=your-secure-postgres-password-here
 # Generate INSTANCE_SECRET with: openssl rand -hex 32
 INSTANCE_SECRET=your-generated-instance-secret-here
 
+# Database Configuration
+# Auto-generated based on POSTGRES_PASSWORD and local Postgres container
+# Only modify if using an external PostgreSQL database
+DATABASE_URL=postgresql://convex:your-encoded-password@postgres:5432
+
+# Convex Backend Origin URLs
+# CONVEX_CLOUD_ORIGIN: where your backend API is accessible (typically port 3210)
+# CONVEX_SITE_ORIGIN: where your HTTP action endpoints are accessible (typically port 3211)
+CONVEX_CLOUD_ORIGIN=https://api.your-domain.com
+CONVEX_SITE_ORIGIN=https://site.your-domain.com
+
 # Convex Dashboard
+# URL of your backend for the dashboard to connect to
+NEXT_PUBLIC_DEPLOYMENT_URL=https://api.your-domain.com
+
 # Generate ADMIN_KEY by running (after backend is healthy):
 # docker compose exec backend ./generate_admin_key.sh
 CONVEX_SELF_HOSTED_ADMIN_KEY=your-generated-admin-key-here
