DATABASE_URL deprectaed

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ INSTANCE_SECRET=your-generated-instance-secret-here
 # Database Configuration
 # Auto-generated based on POSTGRES_PASSWORD and local Postgres container
 # Only modify if using an external PostgreSQL database
-DATABASE_URL=postgresql://convex:your-encoded-password@postgres:5432
+POSTGRES_URL=postgres://convex:your-encoded-password@postgres:5432
 
 # Convex Backend Origin URLs
 # CONVEX_CLOUD_ORIGIN: where your backend API is accessible (typically port 3210)
