--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - CONVEX_CLOUD_ORIGIN
       - CONVEX_RELEASE_VERSION_DEV
       - CONVEX_SITE_ORIGIN
-      - POSTGRES_URL=postgres://convex:${POSTGRES_PASSWORD}@postgres:5432
+      - POSTGRES_URL
       - DISABLE_BEACON
       - DOCUMENT_RETENTION_DELAY=${DOCUMENT_RETENTION_DELAY:-172800}
       - DO_NOT_REQUIRE_SSL=1
