Enhance configuration for SSL/TLS and documentation updates
- Updated `.gitignore` to include SSL/TLS certificate files to protect sensitive data.
- Modified `Caddyfile.template` to provide instructions for using Cloudflare Origin Certificates alongside Let's Encrypt.
- Adjusted `docker-compose.yml` to mount the `certs` directory for SSL certificate storage.
- Revised `README.md` to clarify SSL/TLS options, setup instructions, and service management details.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ convex-data/
 caddy_data/
 caddy_config/
 
+# SSL/TLS Certificates (contains sensitive private keys)
+certs/
+*.crt
+*.key
+*.pem
+*.cert
+
 # OS and Editor
 .DS_Store
 .vscode/
